Update(java rest api): Refactored search logic for better readability and enhance delete API response message.